--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="about-section">
             <div class="about-container">
                 <div class="about-image">
-                    <img src="./BOLO4_files/LOGO.jpg" alt="Sobre Nós">
+                    <img src="./LOGO.jpg" alt="Sobre Nós">
                 </div>
                 <div class="about-text">
                     <h2>Sobre Nossa Confeitaria:</h2>
@@ -30,25 +30,25 @@
             <h2>Nossos Produtos</h2>
             <div class="products-container">
                 <div class="product-card">
-                    <img src="./BOLO4_files/BOLO14.webp" alt="panquecas">
+                    <img src="./BOLO14.webp" alt="panquecas">
                     <h3>Bolo A</h3>
                     <p>Bolo caseiro de chocolate com cobertura de brigadeiro e granulado.</p>
                     <button class="add-to-cart">Adicionar ao Carrinho</button>
                 </div>
                 <div class="product-card">
-                    <img src="./BOLO4_files/CATARINA.webp" alt="feijoada">
+                    <img src="./CATARINA.webp" alt="feijoada">
                     <h3>Bolo Catarina</h3>
                     <p>bolo aniversário dacatarina, chocolate com recheio de brigadeiro e morango.</p>
                     <button class="add-to-cart">Adicionar ao Carrinho</button>
                 </div>
                 <div class="product-card">
-                    <img src="./BOLO4_files/MORANGO AMOR.webp" alt="arroz">
+                    <img src="./MORANGO AMOR.webp" alt="arroz">
                     <h3>Morango do amor</h3>
                     <p>Morangos do amor</p>
                     <button class="add-to-cart">Adicionar ao Carrinho</button>
                 </div>
                 <div class="product-card">
-                    <img src="./BOLO4_files/POTE1.jpg" alt="Produto 4">
+                    <img src="./POTE1.jpg" alt="Produto 4">
                     <h3>Doce no Pote</h3>
                     <p>Doces no pote</p>   
                     <button class="add-to-cart">Adicionar ao Carrinho</button>
